--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "food-swipe",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ayush0923.github.io/food-swipe/",
+  "homepage": "./",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
